--- a/css/main.css
+++ b/css/main.css
@@ -13,48 +13,54 @@ div {
 }
 
 .btn {
+  display: inline-block;
   color: #fff;
   background-color: #333;
   text-decoration: none;
   font-size: 1.125rem;
   padding: .4em .75em .3em;
   border-radius: 8px;
-  border-width: 3px;
+  border: 3px solid #333;
 
 }
 
 .btn:hover {
   background-color: #000;
+  border: solid #000;
 }
 
 .btn-subtle {
   color: #fff;
   background-color: #ccc;
+  border-color: #ccc;
 }
 
 .btn-subtle:hover {
   background-color: #666;
+  border: solid #666;
 }
 
 .btn-ghost {
   color: #000;
   background-color: #fff;
-  border: 3px solid black;
+  border-color: #000;
 }
 
 .btn-ghost:hover {
   background-color: #666;
   color: #fff;
-  border: none;
+  border: solid #666;
 }
 
 .btn-warning {
   color: #fff;
   background-color: #f33;
+  border-color: #f33;
 }
 
 .btn-warning:hover {
   background-color: #933;
+  border: solid #933;
 }
 
 .btn-small {
